--- a/src/app/pages/coins/view/coins.component.html
+++ b/src/app/pages/coins/view/coins.component.html
@@ -22,7 +22,7 @@
 <table class="table table-striped" *ngIf="coins.length > 0">
   <thead>
     <tr>
-      <th scope="col">#</th>
+      <th scope="col">ID</th>
       <th scope="col">Nombre</th>
       <th scope="col">Acronimo</th>
       <th scope="col">Acciones</th>
