--- a/src/app/pages/portfolio/view/portfolio.component.html
+++ b/src/app/pages/portfolio/view/portfolio.component.html
@@ -1,1 +1,56 @@
-<p>portfolio works!</p>
+<div class="row">
+  <div class="col-8">
+    <h1>Portfolio</h1>
+  </div>
+  <div class="col">
+    <div class="text-right">
+      <button class="btn btn-primary" (click)="crearPortfolio()">
+        Crear portfolios
+      </button>
+    </div>
+  </div>
+  <hr />
+</div>
+
+<div
+  class="d-flex justify-content-center"
+  *ngIf="portfolios.length === 0 && error === ''"
+>
+  <div class="spinner-border" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+</div>
+
+<table class="table table-striped" *ngIf="portfolios.length > 0">
+  <thead>
+    <tr>
+      <th scope="col">ID</th>
+      <th scope="col">Nombre</th>
+      <th scope="col">Acciones</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let portfolio of portfolios">
+      <th scope="row">{{ portfolio.id }}</th>
+
+      <td>{{ portfolio.name }}</td>
+
+      <td>
+        <button
+          type="button"
+          class="btn btn-warning mr-3"
+          (click)="editarPortFolio(portfolio)"
+        >
+          Editar
+        </button>
+        <button
+          type="button"
+          class="btn btn-danger"
+          (click)="eliminarPortfolio(portfolio)"
+        >
+          Eliminar
+        </button>
+      </td>
+    </tr>
+  </tbody>
+</table>
