--- a/src/app/pages/portfolio/modal-portfolio/modal-portfolio.component.html
+++ b/src/app/pages/portfolio/modal-portfolio/modal-portfolio.component.html
@@ -4,7 +4,7 @@
   </h1>
 </div>
 <div class="modal-body">
-  <form id="form" autocomplete="off" [formGroup]="form" (ngSubmit)="save()">
+  <form id="form" autocomplete="off" [formGroup]="form">
     <div class="form-group m-t-40">
       <div class="col-xs-12">
         <label for="name" class="form-label"
